test/libyul/yulSyntaxTests/variable_access_cross_funcs.yul
{
	let x := 2
	function g() {
		pop(x)
	}
}
// ----
// DeclarationError 8198: (36-37): Identifier not found.
